--- a/Kaiserreich Korean Translation/localisation/KR_Namibia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Namibia_l_english.yml
@@ -10,7 +10,7 @@ NAM_syndicalist_party_long:0 "남서아프리카 생디칼리스트당"
 NAM_radical_socialist_party:0 "RAP"
 NAM_radical_socialist_party_long:0 "Revolutionäre Arbeiterpartei"
 NAM_social_democrat_party:0 "SWAVO"
-NAM_social_democrat_party_long:0 "Südwestafrikanische Volksorganisation"
+NAM_social_democrat_party_long:0 "남서아프리카 국민단체"
 NAM_social_liberal_party:0 "SWANV"
 NAM_social_liberal_party_long:0 "Südwestafrikanischer Nationalverein"
 NAM_market_liberal_party:0 "OMEGV"
@@ -18,9 +18,9 @@ NAM_market_liberal_party_long:0 "Otavi Minen- und Eisenbahngesellschaft"
 NAM_social_conservative_party:0 "공화당"
 NAM_social_conservative_party_long:0 "공화당"
 NAM_authoritarian_democrat_party:0 "SKG"
-NAM_authoritarian_democrat_party_long:0 "Südwestafrikanische Kolonialgesellschaft"
+NAM_authoritarian_democrat_party_long:0 "남서아프리카 식민회사"
 NAM_paternal_autocrat_party:0 "SKR"
-NAM_paternal_autocrat_party_long:0 "Südwestafrikanische Aktionspartei"
+NAM_paternal_autocrat_party_long:0 "남서아프리카 행동당"
 NAM_national_populist_party:0 "EB"
 NAM_national_populist_party_long:0 "Einheimische Bewegung"
 
